--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,4 +29,15 @@
         app:spanCount="2"
         tools:listitem="@layout/item_note" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_input_add"
+        tools:src="@android:drawable/ic_input_add"
+        android:layout_gravity="bottom|end"
+        />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
