--- a/app/src/main/res/menu/toolbar_menu_item.xml
+++ b/app/src/main/res/menu/toolbar_menu_item.xml
@@ -6,12 +6,19 @@
         android:title="@string/save"
         android:icon="@drawable/ic_outline_save_24"
         app:showAsAction="always"
+        android:orderInCategory="3"
+        />
+    <item
+        android:id="@+id/deleteNoteBtn"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_outline_delete_24"
+        app:showAsAction="ifRoom"
         android:orderInCategory="2"
         />
     <item
-        android:id="@+id/deleteNote"
-        android:title="@string/delete"
-        android:icon="@drawable/ic_outline_delete_24"
+        android:id="@+id/paletteBtn"
+        android:title="@string/palette"
+        android:icon="@drawable/ic_baseline_palette_24"
         app:showAsAction="ifRoom"
         android:orderInCategory="1"
         />
