--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     android:background="#FFF">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/startPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/s"
