Add choose colors, if color not choose -> default color light_grey, if choose color from ColorPicker -> colorInt, adding show color toolbar after create note

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="small">4dp</dimen>
+    <dimen name="small">10dp</dimen>
     <dimen name="med">8dp</dimen>
+    <dimen name="corner">14dp</dimen>
 
     <dimen name="note_item_margin">@dimen/small</dimen>
     <dimen name="note_text_margin">@dimen/med</dimen>
+    <dimen name="note_corner_radius">@dimen/corner</dimen>
+
 </resources>
