--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/note_item_margin">
+    android:layout_margin="@dimen/note_item_margin"
+    app:cardCornerRadius="8dp"
+    android:elevation="4dp"
+    app:cardBackgroundColor="@color/color_light_grey"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
