--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4B76F3</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#5B83F6</color>
+    <color name="colorPrimaryDark">#2462FD</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="holoPurple">#BF9F81D8</color>
 
     <color name="color_white">#F5F5F5</color>
+    <color name="color_light_grey">#EFEFEF</color>
+
     <color name="color_yellow">#FFF59D</color>
     <color name="color_green">#81C784</color>
     <color name="color_blue">#80d8ff</color>
     <color name="color_red">#ff8a80</color>
     <color name="color_violet">#e1bee7</color>
     <color name="color_pink">#f8bbd0</color>
+
 </resources>
